--- a/adm/templates/adm/painel_adm.html
+++ b/adm/templates/adm/painel_adm.html
@@ -43,11 +43,17 @@
          <div class="col-md-4 mb-4 mt-4">
             <div class="card h-100 rounded-4 shadow-sm">
                 <div class="text-center mt-3">
-                    {% if usuario.foto_perfil %}
-                        <img src="{{ usuario.foto_perfil }}" alt="Foto de Perfil" class="rounded-circle" style="width: 100px; height: 100px; object-fit: cover;">
-                    {% else %}
-                        <img src="https://via.placeholder.com/150" alt="Foto de Perfil" class="rounded-circle" style="width: 100px; height: 100px; object-fit: cover;">
-                    {% endif %}
+                    {% if usuario.perfil.foto %}
+                                <img src="{{ usuario.perfil.foto.url }}"
+                                     alt="Foto de Perfil"
+                                     class="rounded-circle mb-3"
+                                     style="width: 200px; height: 200px; object-fit: cover;">
+                            {% else %}
+                                <img src="https://via.placeholder.com/150"
+                                     alt="Foto de Perfil"
+                                     class="rounded-circle mb-3"
+                                     style="width: 200px; height: 200px; object-fit: cover;">
+                            {% endif %}
                 </div>
                 <div class="card-body d-flex flex-column align-items-center text-center">
                     <h5 class="card-title mb-3">{{ usuario.nome_completo }}</h5>
@@ -85,9 +91,9 @@
             <div class="card h-100 rounded-4 shadow-sm">
                 <div class="text-center mt-3">
                     {% if usuario.foto_perfil %}
-                        <img src="{{ usuario.foto_perfil }}" alt="Foto de Perfil" class="rounded-circle" style="width: 100px; height: 100px; object-fit: cover;">
+                        <img src="{{ usuario.foto_perfil.url }}" alt="Foto de Perfil" class="rounded-circle" style="width: 200px; height: 200px; object-fit: cover;">
                     {% else %}
-                        <img src="https://via.placeholder.com/150" alt="Foto de Perfil" class="rounded-circle" style="width: 100px; height: 100px; object-fit: cover;">
+                        <img src="https://via.placeholder.com/150" alt="Foto de Perfil" class="rounded-circle" style="width: 200px; height: 200px; object-fit: cover;">
                     {% endif %}
                 </div>
                 <div class="card-body d-flex flex-column align-items-center text-center">
