--- a/templates/painel_denuncias.html
+++ b/templates/painel_denuncias.html
@@ -29,10 +29,10 @@
             </div>
 
             <div class="dropdown">
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
-                        data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Gerenciador
-                </button>
+<!--                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"-->
+<!--                        data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
+<!--                    Gerenciador-->
+<!--                </button>-->
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                     <a class="dropdown-item" href="{% url 'adm:painel_adm' %}">Usuários</a>
                     <a class="dropdown-item" href="{% url 'adm:cadastrar_usuario' %}">Cadastrar Usuário</a>
