--- a/adm/templates/adm/painel_adm.html
+++ b/adm/templates/adm/painel_adm.html
@@ -7,7 +7,7 @@
     <div class="d-flex justify-content-between align-items-center mb-4">
         <h2>Gerenciamento de Usuários</h2>
         <a href="{% url 'adm:cadastrar_usuario' %}" class="btn btn-success rounded-pill">
-            <i class="fas fa-user-plus"></i> Cadastrar Usuário
+            <i class="fas fa-user-plus"></i> Adicionar
         </a>
     </div>
 
@@ -40,13 +40,13 @@
         <h3 class="mb-4">Usuários Ativos</h3>
         <hr>
         {% for usuario in usuarios_status.ativos %}
-         <div class="col-md-4 mb-4 mt-4">
+         <div class="col-md-4 mb-3 mt-4">
             <div class="card h-100 rounded-4 shadow-sm">
                 <div class="text-center mt-3">
                     {% if usuario.foto_perfil %}
-                        <img src="{{ usuario.foto_perfil.url }}" alt="Foto de Perfil" class="rounded-circle mb-3" style="width: 120px; height: 120px; object-fit: cover;">
+                        <img src="{{ usuario.foto_perfil.url }}" alt="Foto de Perfil" class="rounded-circle mb-2" style="width: 120px; height: 120px; object-fit: cover;">
                     {% else %}
-                        <img src="https://via.placeholder.com/150" alt="Foto de Perfil" class="rounded-circle mb-3" style="width: 120px; height: 120px; object-fit: cover;">
+                        <img src="https://via.placeholder.com/150" alt="Foto de Perfil" class="rounded-circle mb-2" style="width: 120px; height: 120px; object-fit: cover;">
                     {% endif %}
                 </div>
                 <div class="card-body d-flex flex-column align-items-center text-center">
@@ -57,7 +57,7 @@
                         <strong>Data de Cadastro:</strong> {{ usuario.data_cadastro|date:"d/m/Y" }}
                     </p>
                     <div class="d-flex justify-content-center gap-2 mt-3 flex-wrap">
-                        <span class="badge {% if usuario.tipo == 'Gerente' %}bg-primary{% else %}bg-success{% endif %}">
+                        <span class="btn btn-success rounded-pill btn-sm {% if usuario.tipo == 'Gerente' %}{% else %}bg-success{% endif %}">
                             {{ usuario.tipo }}
                         </span>
                         <a href="{% url 'adm:editar_usuario' usuario.username %}" class="btn btn-warning btn-sm rounded-pill">
