--- a/templates/base_denuncia.html
+++ b/templates/base_denuncia.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Formulário de Denúncia{% endblock %}</title>
+    <link rel="shortcut icon" href="{% static 'images/fav.png' %}" type="image/png">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
