--- a/templates/formulario_denuncia.html
+++ b/templates/formulario_denuncia.html
@@ -4,12 +4,14 @@
 {% block title %}Denúncia de Maus-Tratos a Animais{% endblock %}
 
 {% block content %}
-<header class="bg-light py-5 position-relative">
+<header class="bg-green-custom py-5 position-relative rounded">
     <div class="container text-center">
         <a href="{% url 'adm:login' %}?next={% url 'lista_denuncias' %}"
-           class="btn btn-outline-success rounded-pill mt-3 position-absolute top-0 end-0 m-3">Administração</a>
-        <br>
-        <h1>Denúncia de Maus-Tratos a Animais</h1>
+           class="btn btn-outline-success rounded-pill mt-3 position-absolute top-0 end-0 m-3">Administração
+        </a>
+
+        <img src="{% static 'images/image.png' %}" alt="Logo da Associação" class="img-fluid" style="max-height: 150px;">
+        <h1>Associacao dos Defensores dos Direitos dos Animais de Sud e Band</h1>
         <p>Preserve a vida e o bem-estar dos animais. Sua denúncia pode salvar uma vida!</p>
     </div>
 </header>
@@ -82,7 +84,7 @@
         <section>
             <h2>3. Informações sobre o Responsável (se conhecido)</h2>
             <div class="form-group">
-                {{ form.responsavel.label_tag }}
+                {{ form.responsavel.label_tag }}ho
                 {{ form.responsavel }}
                 {% if form.responsavel.errors %}
                 <div class="field-error">{{ form.responsavel.errors }}</div>
@@ -154,15 +156,6 @@
             Todas as informações descritas aqui devem ser verdadeiras, esteja ciente!
         </p>
     </form>
-
-    {% for tratativa in tratativas %}
-        <div>
-            <strong>{{ tratativa. }}</strong> - {{ tratativa.data_tratativa|date:"d/m/Y H:i" }}<br>
-            {{ tratativa.descricao }}
-        </div>
-    {% empty %}
-        <p>Nenhuma tratativa registrada.</p>
-    {% endfor %}
 </main>
 
 {% endblock %}
