--- a/templates/painel_denuncias.html
+++ b/templates/painel_denuncias.html
@@ -28,18 +28,14 @@
                 </button>
             </div>
 
-            <div class="dropdown">
-<!--                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"-->
-<!--                        data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
-<!--                    Gerenciador-->
-<!--                </button>-->
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <a class="dropdown-item" href="{% url 'adm:painel_adm' %}">Usuários</a>
-                    <a class="dropdown-item" href="{% url 'adm:cadastrar_usuario' %}">Cadastrar Usuário</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="{% url 'adm:logout' %}">Sair</a>
-                </div>
-            </div>
+<!--            <div class="dropdown">-->
+<!--                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">-->
+<!--                    <a class="dropdown-item" href="{% url 'adm:painel_adm' %}">Usuários</a>-->
+<!--                    <a class="dropdown-item" href="{% url 'adm:cadastrar_usuario' %}">Cadastrar Usuário</a>-->
+<!--                    <div class="dropdown-divider"></div>-->
+<!--                    <a class="dropdown-item" href="{% url 'adm:logout' %}">Sair</a>-->
+<!--                </div>-->
+<!--            </div>-->
         </div>
     </div>
 
@@ -120,9 +116,9 @@
                 <td>{{ denuncia.local|default:"Não informado" }}</td>
                 <td>{{ denuncia.data_denuncia|date:"d/m/Y H:i" }}</td>
                 <td>
-                            <span class="status-badge badge-{{ denuncia.status }}">
-                                {{ denuncia.get_status_display }}
-                            </span>
+                    <span class="status-badge badge-{{ denuncia.status }}">
+                        {{ denuncia.get_status_display }}
+                    </span>
                 </td>
                 <td class="actions">
                     <div class="action-group">
